# clipman

./: .gitignore  Makefile  README.md  clipman  clipman-gui  clipman.desktop  pyproject.toml
debian/: changelog  clipman.1  clipman.dirs  clipman.postrm.debhelper  clipman.service  control  install  postinst  postrm  rules
etc/dconf/db/local.d/: clipman
