[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipman"
version = "1.0.0"
description = "A simple clipboard manager for Linux (X11)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Bawa"}
]
keywords = ["clipboard", "manager", "linux", "x11"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
clipman = "clipman:main"
clipman-gui = "clipman-gui:main"

[project.urls]
Homepage = "https://github.com/bawa/clipman"
Repository = "https://github.com/bawa/clipman.git"
